@@ -21,6 +21,9 @@ Fixed: Collect system statistics even if process statistics failed (independent)
 
 Fixed: Reduce the state file related overhead
 
+Fixed: The ICMPv4 ping test failed if the payload size was set to less then 20 bytes. The minimum payload
+size is now 8 bytes.
+
 Changed: HTTP protocol test: switched the default protocol from HEAD to GET. The HEAD method is not
 supported by some webservers thus the simplified test syntax failed for some users if the method was
 not specified explicitly. To continue using the HEAD method with reduced network usage, add the method
